# ltcd

./: .gitignore  README.md  pyproject.toml
confs/: train_cross_attention_keypoint.yaml  train_deformable_grid.yaml  train_first_row.yaml  train_grid_line_predictor.yaml  train_nafunet_heatmap.yaml  train_normal_line_predictor.yaml  train_row_predictor.yaml  train_segmentation_infinite.yaml  train_yolo_keypoint_predictor.yaml  train_yolo_keypoint_predictor_medium.yaml  train_yolo_keypoint_predictor_small.yaml
scripts/: measure_size.py  train_cross_attention_keypoint.py  train_deformable_grid.py  train_first_row.py  train_grid_line_predictor.py  train_nafunet_heatmap.py  train_normal_line_predictor.py  train_row_predictor.py  train_segmentation_infinite.py
src/ltcd/: training.py
src/ltcd/archs/: __init__.py  cross_attention_keypoint.py  deformable_grid_predictor.py  first_row_regressor.py  fpn.py  grid_line_predictor.py  keypoint_ar.py  lstm_row_predictor.py  lstm_table_predictor.py  nafunet.py  normal_line_predictor.py  tinyunet.py  unext.py  yolo_keypoint_predictor.py
src/ltcd/datasets/: keypoint_dataset.py
src/ltcd/generators/: __init__.py  doc_generator.py  string_generators.py  utils.py
src/ltcd/losses/: __init__.py  row_losses.py  segmentation_losses.py
src/ltcd/metrics/: __init__.py  table_metrics.py
src/ltcd/utils/: __init__.py  visualization.py
